--- a/package.json
+++ b/package.json
@@ -5,8 +5,14 @@
   "main": "index.js",
   "scripts": {
     "sass": "sass --watch ./sass/style.scss:./css/style.css",
-    "prefix": "postcss ./css/style.css --use autoprefixer -d ./css/"
+    "prefix": "postcss --watch ./css/style.css --use autoprefixer -d ./css/",
+    "start": "npm-run-all --parallel prefix sass"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "npm-run-all": "^4.1.5",
+    "postcss": "^7.0.32",
+    "sass": "^1.26.10"
+  }
 }
