--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "npm-run-all": "^4.1.5",
     "postcss": "^7.0.32",
+    "prettier": "^2.0.5",
     "sass": "^1.26.10"
   }
 }
